--- a/theme/custom.css
+++ b/theme/custom.css
@@ -1,105 +1,118 @@
 
 /* font imports */
 
-@import url('https://fonts.googleapis.com/css2?family=Vollkorn:ital@0;1&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@500&display=swap');
+@font-face {
+    font-family: 'VeraMono';
+    src: URL('theme/fonts/VeraMono.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'Charter';
+    src: URL('theme/fonts/Charter Regular.otf') format('opentype');
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Charter';
+    src: URL('theme/fonts/Charter Bold.otf') format('opentype');
+    font-weight: bold;
+}
+
+@font-face {
+    font-family: 'Charter';
+    src: URL('theme/fonts/Charter Italic.otf') format('opentype');
+    font-style: italic;
+}
+
 
 :root {
-    --content-width: 90ch;
+    /* width of the main article for desktop screens */
+    --content-width: 100ch;
+    /* width of the sidebar table of contents on desktop screens */
+    --toc-width: 240px;
+    /* width of margin notes */
     --margin-width: 240px;
-    --nav-width: 160px;
 }
 
-div.content {
-    display: flex;
-    flex-direction: row;
-    flex: 1 1 auto;
-    margin-top: 50px;
-}
+/* Positioning, widths, margins and padding for article content */
 
-main {
-    margin-top: auto;
+#page {
+    max-width: calc(var(--content-width) + var(--toc-width) + 16px);
+    margin-left: auto;
+    margin-right: auto;
 }
-
-main#page {
-    padding: 10px;
-    margin-left: calc(var(--nav-width) + 16px + 1em);
-}
-
-/* Article container */
 
 article {
     max-width: var(--content-width);
+    min-height: 420px;
+    margin-top: 24px;
+    margin-left: var(--toc-width);
 }
 
-img {
+article > p {
+    margin-block-start: 22px;
+    margin-block-end: 22px;
+}
+
+article > img {
     max-width: var(--content-width);
 }
 
-
-/* Fonts */
-
-p, li, td, th {
-    color: #111111;
-    font-family: 'Vollkorn', serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 18px;
-    line-height: 24px;
-}
-
-p {
-    margin-block-start: 8px;
-    margin-block-end: 20px;
-}
-
-
-h2 {
-    margin-top: 48px;
-    font-size: 30px;
-}
-
-h3 {
+article > h2 {
     margin-top: 32px;
-    font-size: 24px;
 }
 
-
-h1, h2, h3, h4, h5 {
-    font-family: 'Vollkorn', serif;
-    font-size: 22px;
-    font-weight: bold;
-    color: #333;
-}
-
-h3 {
-
-    font-weight: bold;
-    font-size: 20px;
+article > h3 {
+    margin-top: 28px;
     margin-bottom: 8px;
 }
 
-h1 {
-    font-size: 30px;
-}
-
-hr {
+article > hr {
     margin-top: 50px;
     margin-bottom: 50px;
     max-width: 200px;
     color: #aaa;
 }
 
-.hljs {
-    background-color: #eff5eb;
+
+/* Typography */
+
+article p, article li, article td, article th {
+    color: #111111;
+    font-family: 'Charter', 'Source Serif Pro', serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 24px;
 }
 
+
+article h1, article h2, article h3, article h4, article h5 {
+    font-family: 'Charter', serif;
+    font-style: italic;
+    color: #333;
+}
+
+article > h1 {
+    font-size: 26px;
+}
+
+article > h2 {
+    font-size: 22px;
+}
+
+article > h3 {
+    font-size: 20px;
+}
+
+
 code {
-    font-family: 'Fira Code', 'JuliaMono', monospace;
+    font-family: 'VeraMono', monospace;
     font-style: normal;
     font-size: 15px;
     padding: 2px;
     border-radius: 2px;
+    background-color: #f3f3f3;
+    color: #222;
 }
 
 pre > code {
@@ -108,28 +121,12 @@ pre > code {
     line-height: 125%;
     border-radius: 0px;
     padding: 8px;
-    background-color: #f9f9f9;
+    background-color: #f3f3f3;
 }
 
-h3 code {
-    font-size: 20px;
-}
-
-h2 code {
-    font-size: 20px;
-}
-
-a > code {
-    color: black;
-    text-decoration: underline;
-}
-
-h3 a > code {
-    text-decoration: none
-}
 
 code.cell-output {
-    color: #444;
+    color: #111;
     background-color: #ffffff;
 }
 
@@ -137,82 +134,48 @@ pre {
     margin: 8px 0px;
 }
 
-/* Links */
-
-a:link {
-    text-decoration: none;
-    background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(currentColor, currentColor);
-    background: linear-gradient(#fffff8, #fffff8), linear-gradient(#fffff8, #fffff8), linear-gradient(currentColor, currentColor);
-    -webkit-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
-    -moz-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
-    background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
-    background-repeat: no-repeat, no-repeat, repeat-x;
-    text-shadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8, 0.06em 0 #fffff8, -0.06em 0 #fffff8, 0.09em 0 #fffff8, -0.09em 0 #fffff8, 0.12em 0 #fffff8, -0.12em 0 #fffff8, 0.15em 0 #fffff8, -0.15em 0 #fffff8;
-    background-position: 0% 93%, 100% 93%, 0% 93%;
-}
-
-a:link, a:visited {
-    color: inherit;
-}
-
-a:hover, a:hover > code {
-    color: rgb(0, 114, 0);
-}
-
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
-    a:link {
-        background-position-y: 87%, 87%, 87%;
-    }
-}
-
-a:link::selection, a:link::-moz-selection {
-    text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
-    background: #b4d5fe;
-}
-
 /* Tables */
 
-table {
+article > table {
     margin: 16px 16px;
     overflow-x: auto;
     display: block;
 }
-th + th , td + td{
+article > th + th , article > td + td{
     padding-left: 12px;
 }
 
-th {
+article > th {
     font-style: italic;
     padding-bottom: 8px;
     margin-bottom: 8px;
 }
 
-li > * {
+article > li > * {
     margin-top: 8px;
     margin-bottom: 8px;
 }
 
 .marginnote {
     float: right;
-    font-size: 14px;
+    font-size: 13px;
     width: var(--margin-width);
     clear: right;
-    margin-top: 0.25rem;
-    margin-bottom: 0;
-    margin-left: calc(var(--content-width) + 20px);
+    margin-left: calc(var(--content-width) + 90px);
     line-height: 1.3;
     vertical-align: baseline;
     position: absolute;
+    margin-top: 25px;
 }
 
-.katex {
-    font-size: 1.1em;
-}
-
-/* Admonitions */
+/*
+Admonitions
+*/
 
 .admonition {
-    margin: 16px 16px;
+    margin: 32px 16px;
+    border-left: 8px solid #aaa;
+    padding: 0.5px 1px;
 }
 
 .admonition-title {
@@ -220,13 +183,18 @@ li > * {
 }
 
 .admonition > * {
-    margin-left: 8px;
+    margin-left: 16px;
     margin-right: 8px;
+}
+
+
+.admonition.info {
+    border-left: 8px solid rgb(135, 206, 235);
 }
 
 /* Footnotes */
 
-/* a.footnote {
+a.footnote {
     vertical-align: super;
     font-size: 0.5em;
     margin-left: 2px;
@@ -245,14 +213,6 @@ div.footnote > p {
 
 div.footnote > p.footnote-title {
     display: inline;
-} */
-
-footer {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 32px;
-    margin-bottom: 16px;
-    width: 300px;
 }
 
 /* Project name */
@@ -261,39 +221,52 @@ footer {
     width: calc(var(--toc-width) - 32px);
     float: left;
     text-align: right;
-    margin-left: 16px;
+    margin-right: 16px;
     padding-right: 16px;
-    font-family: 'Vollkorn', serif;
-    font-size: 25px;
+    font-size: 22px;
 }
 
 /* Menu container */
 
 .menu {
-    padding-top: 4px;
-    border-bottom: none;
-    background-color: inherit;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 8px;
+    height: 40px;
 }
 
 #menu-toggler {
     cursor: pointer;
-    padding-right: 10px;
+    margin-left: 8px;
+    margin-right: 4px;
 }
-
 #search-input {
     border: 1px solid #ddd;
-    border-radius: 10px;
-    font-size: 19px;
-    margin: 0px 8px;
+    border-radius: 12px;
+    font-size: 17px;
+    margin: 0px;
     flex-grow: 1;
     padding: 4px 8px;
+    padding-top: 5px;
 }
 
-/* Page navigation */
+#version-selector {
+    border: 1px solid #ddd;
+    padding: 4px;
+    margin-left: 8px;
+    border-radius: 412px;
+}
 
+#page-navigation {
+    max-width: var(--content-width);
+    margin-left: var(--toc-width);
+    margin-top: 48px;
+}
 #page-navigation > a {
+    color: #aaa;
+    padding: 0px 32px;
     text-decoration: none;
-    color: rgb(37, 37, 37);
     background: unset;
     text-shadow: unset;
 }
@@ -301,15 +274,16 @@ footer {
     float: right;
 }
 
-/* # Table of contents container */
+/* Table of contents container */
 
 #toc {
-    width: var(--nav-width);
-    position: fixed;
-    z-index: 1;
-    top: 10;
-    left: 0;
+    width: calc(var(--toc-width) - 32px);
+    display: block;
+    float: left;
+    margin-top: 76px;
     border-right: 1px solid #ddd;
+    margin-right: 16px;
+    padding-right: 16px;
 }
 
 #toc:not(:hover) {
@@ -317,7 +291,10 @@ footer {
 }
 
 #toc * {
+    font-family: Charter, serif;
     font-size: 16px;
+    font-weight: normal;
+    font-style: normal;
     text-align: right;
 }
 
@@ -351,13 +328,18 @@ footer {
     font-size: 15px;
 }
 
-#toc hr {
-    margin: 10px 0px 10px 10px;
-    height: 0;
-    border-top: 1px solid #ddd;
+.katex {
+    font-size: 15px;
 }
 
-/* Dynamic size */
+footer {
+    margin-left: var(--toc-width);
+    margin-top: 32px;
+    margin-bottom: 16px;
+    text-align: center;
+    color: #aaa;
+    width: 300px;
+}
 
 @media (max-width: 1260px) {
     .marginnote {
@@ -369,6 +351,9 @@ footer {
 }
 
 @media (max-width: 760px) {
+    #page {
+        width: 100%;
+    }
     article {
         margin-left: 12px;
         margin-right: 12px;
@@ -386,24 +371,129 @@ footer {
         margin-right: 8px;
         padding-right: 0px;
     }
+
     #toc {
-        width: 100%;
-        display: none;
-        justify-content: center;
-        position: relative;
-        align-self: center;
-        top: 0;
+        width: 90%;
+        margin: 16px 5%;
+        border: none;
     }
     #toc * {
-        text-align: inherit;
+        text-align: left;
     }
+
     #toc:not(:hover) {
         opacity: 100%;
     }
-    main#page {
+
+    footer, #page-navigation {
         margin-left: auto;
+        margin-right: auto;
     }
-    div.content {
-        display: block;
+}
+
+@media (min-width: 800px) {
+    #menu-toggler {
+        display: none;
     }
+}
+
+/* Link styling */
+
+a {
+    text-decoration: none;
+} 
+
+a:link {
+    color: rgb(0, 126, 0);
+}
+
+a:visited {
+    color: rgb(0, 97, 0);
+}
+
+a:hover {
+    font-weight: bold;
+}
+
+a:not(:hover) > code {
+    color:inherit;
+    font-weight: bold;
+}
+
+a:hover > code {
+    color:inherit;
+    font-weight: bold;
+}
+
+/* Code styling From https://github.com/highlightjs/highlight.js/blob/master/src/styles/atom-one-light.css */
+
+.hljs-comment,
+.hljs-quote {
+    color: #a0a1a7;
+    font-style: italic;
+}
+.hljs-doctag,
+.hljs-keyword,
+.hljs-formula {
+    color: #666;
+}
+
+
+
+
+.hljs-section,
+.hljs-name,
+.hljs-selector-tag,
+.hljs-deletion,
+.hljs-subst {
+    color: #e45649;
+}
+
+.hljs-literal {
+    color: #0184bb;
+}
+
+.hljs-string,
+.hljs-regexp,
+.hljs-addition,
+.hljs-attribute,
+.hljs-meta-string {
+    color: #50a14f;
+}
+
+.hljs-built_in,
+.hljs-class .hljs-title {
+    color: #c18401;
+}
+
+.hljs-attr,
+.hljs-variable,
+.hljs-template-variable,
+.hljs-type,
+.hljs-selector-class,
+.hljs-selector-attr,
+.hljs-selector-pseudo,
+.hljs-number {
+    color: #986801;
+}
+
+.hljs-symbol,
+.hljs-bullet,
+.hljs-link,
+.hljs-meta,
+.hljs-selector-id,
+.hljs-title {
+    color: #4078f2;
+}
+
+.hljs-emphasis {
+    font-style: italic;
+}
+
+.hljs-strong {
+    font-weight: bold;
+}
+
+.hljs-link {
+    text-decoration: underline;
 }
