--- a/theme/custom.css
+++ b/theme/custom.css
@@ -76,7 +76,7 @@ article > hr {
 
 /* Typography */
 
-article p, article li, article td, article th {
+article p, article li, article table {
     color: #111111;
     font-family: 'Charter', 'Source Serif Pro', serif;
     font-style: normal;
@@ -136,22 +136,21 @@ pre {
 
 /* Tables */
 
-article > table {
+article table {
     margin: 16px 16px;
     overflow-x: auto;
     display: block;
 }
-article > th + th , article > td + td{
+article th + th , article td + td{
     padding-left: 12px;
 }
 
-article > th {
+article th {
     font-style: italic;
-    padding-bottom: 8px;
-    margin-bottom: 8px;
+    text-decoration: underline;
 }
 
-article > li > * {
+article li * {
     margin-top: 8px;
     margin-bottom: 8px;
 }
@@ -168,14 +167,14 @@ article > li > * {
     margin-top: 25px;
 }
 
-/*
-Admonitions
-*/
+/* Admonitions */
 
 .admonition {
     margin: 32px 16px;
     border-left: 8px solid #aaa;
     padding: 0.5px 1px;
+    border: none;
+    background-color: inherit;
 }
 
 .admonition-title {
@@ -187,9 +186,25 @@ Admonitions
     margin-right: 8px;
 }
 
-
 .admonition.info {
     border-left: 8px solid rgb(135, 206, 235);
+}
+
+.admonition.tip {
+    border-left: 8px solid #5ac480;
+}
+
+.admonition.compat {
+    border-left: 8px solid #5d9fcb;
+}
+
+.admonition.warning {
+    border-left: 8px solid #fae280;
+}
+
+.admonition.danger {
+    border: 2px solid #cd5c56;
+    border-left: 8px solid #cd5c56;
 }
 
 /* Footnotes */
@@ -232,14 +247,17 @@ div.footnote > p.footnote-title {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-top: 8px;
+    padding-top: 8px;
     height: 40px;
+    border: none;
+    background-color: rgba(255, 255, 255, 0.97);
+    max-width: inherit;
 }
 
 #menu-toggler {
     cursor: pointer;
     margin-left: 8px;
-    margin-right: 4px;
+    margin-right: 20px;
 }
 #search-input {
     border: 1px solid #ddd;
@@ -328,6 +346,12 @@ div.footnote > p.footnote-title {
     font-size: 15px;
 }
 
+#toc hr {
+    height: 0;
+    border-top: 1px solid #ddd;
+    margin: 16px 0px 0px 30px;
+}
+
 .katex {
     font-size: 15px;
 }
@@ -350,26 +374,25 @@ footer {
     }
 }
 
-@media (max-width: 760px) {
+@media (max-width: 760px) {    
     #page {
         width: 100%;
     }
+
     article {
         margin-left: 12px;
         margin-right: 12px;
+        width: 90%;
     }
+    
     .marginnote {
         float: none;
         margin: 16px 8px;
         width: 100%;
     }
+    
     img {
         max-width: 100%;
-    }
-    .menu {
-        margin-left: 8px;
-        margin-right: 8px;
-        padding-right: 0px;
     }
 
     #toc {
@@ -385,15 +408,15 @@ footer {
         opacity: 100%;
     }
 
+    #toc hr {
+        height: 0;
+        border-top: 1px solid #ddd;
+        margin: 16px 0px 0px 0px;
+    }
+
     footer, #page-navigation {
         margin-left: auto;
         margin-right: auto;
-    }
-}
-
-@media (min-width: 800px) {
-    #menu-toggler {
-        display: none;
     }
 }
 
