--- a/theme/custom.css
+++ b/theme/custom.css
@@ -5,6 +5,7 @@
     font-family: 'VeraMono';
     src: URL('theme/fonts/VeraMono.ttf') format('truetype');
 }
+
 @font-face {
     font-family: 'Charter';
     src: URL('theme/fonts/Charter Regular.otf') format('opentype');
@@ -259,6 +260,7 @@ div.footnote > p.footnote-title {
     margin-left: 8px;
     margin-right: 20px;
 }
+
 #search-input {
     border: 1px solid #ddd;
     border-radius: 12px;
@@ -267,6 +269,7 @@ div.footnote > p.footnote-title {
     flex-grow: 1;
     padding: 4px 8px;
     padding-top: 5px;
+    min-width: 200px;
 }
 
 #version-selector {
@@ -386,7 +389,7 @@ footer {
     }
 }
 
-@media (max-width: 760px) {    
+@media (max-width: 760px) {
     #page {
         width: 100%;
     }
@@ -396,13 +399,13 @@ footer {
         margin-right: 12px;
         width: 90%;
     }
-    
+
     .marginnote {
         float: none;
         margin: 16px 8px;
         width: 100%;
     }
-    
+
     img {
         max-width: 100%;
     }
@@ -436,7 +439,7 @@ footer {
 
 a {
     text-decoration: none;
-} 
+}
 
 a:link {
     color: rgb(0, 126, 0);
@@ -451,75 +454,132 @@ a > code {
     font-weight: bold;
 }
 
-/* Code styling From https://github.com/highlightjs/highlight.js/blob/master/src/styles/atom-one-light.css */
+/*!
+  Theme: Default
+  Description: Original highlight.js style
+  Author: (c) Ivan Sagalaev <maniac@softwaremaniacs.org>
+  Maintainer: @highlightjs/core-team
+  Website: https://highlightjs.org/
+  License: see project LICENSE
+  Touched: 2021
+*/
 
-.hljs-comment,
-.hljs-quote {
-    color: #a0a1a7;
-    font-style: italic;
+/*
+From Documenter.jl
+*/
+pre code.hljs {
+  display: block;
+  overflow-x: auto;
 }
-.hljs-doctag,
-.hljs-keyword,
-.hljs-formula {
-    color: #666;
+
+code.hljs {
+  padding: 3px 5px;
+}
+/* end baseline CSS */
+
+.hljs {
+  background: #F0F0F0;
+  color: #444;
 }
 
+/* Base color: saturation 0; */
 
-
-
-.hljs-section,
-.hljs-name,
-.hljs-selector-tag,
-.hljs-deletion,
 .hljs-subst {
-    color: #e45649;
+  /* default */
 }
+
+/* purposely ignored */
+.hljs-formula,
+.hljs-attr,
+.hljs-property,
+.hljs-params {}
+
+.hljs-comment {
+  color: #888888;
+}
+.hljs-tag,
+.hljs-punctuation {
+  color: #444a;
+}
+
+.hljs-tag .hljs-name,
+.hljs-tag .hljs-attr {
+  color: #444;
+}
+
+
+.hljs-keyword,
+.hljs-attribute,
+.hljs-selector-tag,
+.hljs-meta .hljs-keyword,
+
+.hljs-doctag,
+.hljs-name {
+  font-weight: bold;
+}
+
+
+/* User color: hue: 0 */
+
+.hljs-type,
+.hljs-string,
+.hljs-number,
+.hljs-selector-id,
+.hljs-selector-class,
+.hljs-quote,
+.hljs-template-tag,
+.hljs-deletion {
+  color: #880000;
+}
+
+.hljs-title,
+.hljs-section {
+  color: #880000;
+  font-weight: bold;
+}
+
+.hljs-regexp,
+.hljs-symbol,
+.hljs-variable,
+.hljs-template-variable,
+.hljs-link,
+.hljs-selector-attr,
+.hljs-operator,
+.hljs-selector-pseudo {
+  color: #BC6060;
+}
+
+/* Language color: hue: 90; */
 
 .hljs-literal {
-    color: #0184bb;
-}
-
-.hljs-string,
-.hljs-regexp,
-.hljs-addition,
-.hljs-attribute,
-.hljs-meta-string {
-    color: #50a14f;
+  color: #78A960;
 }
 
 .hljs-built_in,
-.hljs-class .hljs-title {
-    color: #c18401;
-}
-
-.hljs-attr,
-.hljs-variable,
-.hljs-template-variable,
-.hljs-type,
-.hljs-selector-class,
-.hljs-selector-attr,
-.hljs-selector-pseudo,
-.hljs-number {
-    color: #986801;
-}
-
-.hljs-symbol,
 .hljs-bullet,
-.hljs-link,
-.hljs-meta,
-.hljs-selector-id,
-.hljs-title {
-    color: #4078f2;
+.hljs-code,
+.hljs-addition {
+  color: #397300;
 }
+
+
+/* Meta color: hue: 200 */
+
+.hljs-meta {
+  color: #1f7199;
+}
+
+.hljs-meta .hljs-string {
+  color: #4d99bf;
+}
+
+
+/* Misc effects */
 
 .hljs-emphasis {
-    font-style: italic;
+  font-style: italic;
 }
 
 .hljs-strong {
-    font-weight: bold;
-}
-
-.hljs-link {
-    text-decoration: underline;
+  font-weight: bold;
 }
